--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Estudio fotográfico</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bienvenido a la web de Estudio Fotográfico 2000</h1>
